--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1> Deal or No Deal </h1>
+      <h1><span id="deal">Deal</span> or <span id="no-deal">No Deal</span><span id='q'>?</span></h1>
       <div id="instructions">pick a case</div>
       <div id="mine">my case</div>
       <div id="offer"> offer </div>
@@ -28,7 +28,11 @@
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
+
+
   <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="stat.js"></script>
   <script type="text/javascript" src="game.js"></script>
+
   </body>
 </html>
