finished making game responsive for the most part

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Expanded|Saira" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Deal or No Deal</title>
   </head>
   <body>
@@ -12,7 +12,10 @@
       <h1><span id="deal">Deal</span> or <span id="no-deal">No Deal</span><span id='q'>?</span></h1>
       <div id="instructions">pick a case</div>
       <div id="mine">my case</div>
-      <div id="offer"> offer </div>
+      <div id="offer">
+        offer
+        <!-- <div class="howie"></div> -->
+      </div>
 
     </header>
 
@@ -29,10 +32,12 @@
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
 
+  <footer></footer>
 
-  <script type="text/javascript" src="main.js"></script>
-  <script type="text/javascript" src="stat.js"></script>
-  <script type="text/javascript" src="game.js"></script>
-
+  <script type="text/javascript" src="js/main.js"></script>
+  <script type="text/javascript" src="js/stat.js"></script>
+  <script type="text/javascript" src="js/game.js"></script>
+  <script type="text/javascript" src="js/media.js"></script>
   </body>
+
 </html>
