--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     </header>
 
-    <div class="row" style="margin-top: 2rem">
+    <div class="row">
     <div class="col col-md-2 low-numbers"></div>
     <div class="col col-md-8 board"></div>
     <div class="col col-md-2 high-numbers"></div>
