--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <h1><span id="deal">Deal</span> or <span id="no-deal">No Deal</span><span id='q'>?</span></h1>
-      <div id="instructions">pick a case</div>
+      <div id="instructions">choose your case</div>
       <div id="mine">my case</div>
       <div id="offer">
         offer
