--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <header>
-      <h1><span id="deal">Deal</span> or <span id="no-deal">No Deal</span><span id='q'>?</span></h1>
+      <div class="logo">
+        <h1><span id="deal">Deal</span> or <span id="no-deal">No Deal</span><span id='q'>?</span></h1>
+      </div>
       <div id="instructions">choose your case</div>
       <div id="mine">my case</div>
       <div id="offer">
