added lots of images, firebase working but still need to add ranking

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
   </head>
   <body>
     <header>
-      <div class="logo">
-        <h1><span id="deal">Deal</span> or <span id="no-deal">No Deal</span><span id='q'>?</span></h1>
-      </div>
+      <h1><span id="deal">Deal</span> or <span id="no-deal">No Deal</span><span id='q'>?</span></h1>
       <div id="instructions">choose your case</div>
       <div id="mine">my case</div>
       <div id="offer">
@@ -35,11 +33,13 @@
   crossorigin="anonymous"></script>
 
   <footer></footer>
-
+  <!-- firebase -->
+  <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
-  <script type="text/javascript" src="js/stat.js"></script>
-  <script type="text/javascript" src="js/game.js"></script>
   <script type="text/javascript" src="js/media.js"></script>
+  <script type="text/javascript" src="js/stat.js"></script>
+  <script type="text/javascript" src="js/titlePage.js"></script>
+  <script type="text/javascript" src="js/game.js"></script>
   </body>
 
 </html>
