added intro page using js

--- a/highscores.html
+++ b/highscores.html
@@ -8,10 +8,8 @@
     <title>Intro</title>
   </head>
   <body>
-      <img
-    src="images/logo-black.svg"
-    alt="Deal or No Deal"
-    width="100%"/>
+    <img src="images/logo-black.svg" alt="Deal or No Deal" width="100%"/>
+
 
     <nav>
       <button type="text" name="game" data-transition="slideup">Back to the game</button>
