--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Deal or No Deal</title>
   </head>
   <body>
+    <div class="all"> 
     <header>
       <h1><span id="deal">Deal</span> or <span id="no-deal">No Deal</span><span id='q'>?</span></h1>
       <div id="instructions">choose your case</div>
@@ -15,8 +16,7 @@
       <div id="offer">
         offer
         <!-- <div class="howie"></div> -->
-      </div>
-
+      <!-- </div> -->
     </header>
 
     <div class="row">
@@ -40,6 +40,9 @@
   <script type="text/javascript" src="js/stat.js"></script>
   <script type="text/javascript" src="js/titlePage.js"></script>
   <script type="text/javascript" src="js/game.js"></script>
+
+  </div>
   </body>
+
 
 </html>
