debugged media queries, implemented same-page viewing for top 10 high scores

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Deal or No Deal</title>
   </head>
   <body>
-    <div class="all"> 
+    <div class="all">
     <header>
       <h1><span id="deal">Deal</span> or <span id="no-deal">No Deal</span><span id='q'>?</span></h1>
       <div id="instructions">choose your case</div>
@@ -38,7 +38,7 @@
   <script type="text/javascript" src="js/main.js"></script>
   <script type="text/javascript" src="js/media.js"></script>
   <script type="text/javascript" src="js/stat.js"></script>
-  <script type="text/javascript" src="js/titlePage.js"></script>
+  <script type="text/javascript" src="js/highscores.js"></script>
   <script type="text/javascript" src="js/game.js"></script>
 
   </div>
