small form adjustment

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Expanded|Saira" rel="stylesheet">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Deal or No Deal</title>
@@ -18,6 +19,9 @@
         <!-- <div class="howie"></div> -->
       <!-- </div> -->
     </header>
+
+    <div class="vol">
+    </div>
 
     <div class="row">
     <div class="col col-md-2 low-numbers"></div>
